fix: make text visible

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body {
     background-color: rgb(0, 0, 0);
   }
+#text{
+  color:white;
+}
